force-app/main/default/objects/Rv_SubscribeToShtDave__e/Rv_SubscribeToShtDave__e.object-meta.xml
<CustomObject>
    <description>This event will be triggered if any deal is created in SHt Dave.his event will be handled from SHT Dave Screen &quot;Sales Hedge&quot; using cometD library</description>
    <label>Rv_SubscribeToShtDave</label>
    <pluralLabel>Rv_SubscribeToShtDave</pluralLabel>
</CustomObject>