force-app/main/default/objects/Rv_SubscribeToShtDave__e/fields/Hedge_Lots__c.field-meta.xml
<CustomField>
    <fullName>Hedge_Lots__c</fullName>
    <label>Hedge Lots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>