force-app/main/default/objects/Rv_SubscribeToShtDave__e/fields/Open_Xposr_Lots__c.field-meta.xml
<CustomField>
    <fullName>Open_Xposr_Lots__c</fullName>
    <label>Open Xposr Lots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>