force-app/main/default/objects/Rv_SubscribeToShtDave__e/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <length>12</length>
    <type>Text</type>
</CustomField>