force-app/main/default/objects/Rv_SubscribeToShtDave__e/fields/Xposr_CBM__c.field-meta.xml
<CustomField>
    <fullName>Xposr_CBM__c</fullName>
    <label>Xposr CBM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>