force-app/main/default/objects/Rv_SubscribeToShtDave__e/fields/Xposr_Tonne__c.field-meta.xml
<CustomField>
    <fullName>Xposr_Tonne__c</fullName>
    <label>Xposr Tonne</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>